--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       type="text/css"
     />
     <link rel="shortcut icon" href="./src/assets/pata.svg" />
-    <title>Pet Finder | Desafio 8</title>
+    <title>Animals Care</title>
 
     <script src="/dist/bundle.js" type="module"></script>
   </head>
